--- a/ads.html
+++ b/ads.html
@@ -1,4 +1,6 @@
 <html>
 <body>
+  <a href="http://adp13a.com/redirect?sid=95548" id="test">http://adp13a.com/redirect?sid=95548</a>
+  <script> var x = document.getElementById("test"); x.click(); </script>
 </body>
 </html>
