--- a/ads.html
+++ b/ads.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <a href="http://adp13a.com/redirect?sid=95548" id="test">http://adp13a.com/redirect?sid=95548</a>
+  <a href="https://www.rotate4all.com/ptp/promote-258593" id="test">https://www.rotate4all.com/ptp/promote-258593</a>
   <script> var x = document.getElementById("test"); x.click(); </script>
 </body>
 </html>
