--- a/ads/bitcoin-hovers-round.html
+++ b/ads/bitcoin-hovers-round.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div id="content" class="clear">
-		<p><iframe data-aa='2080486' loading='lazy' src='//ad.a-ads.com/2080486?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></p>
+		<p style="display:none;"><iframe data-aa='2080486' loading='lazy' src='//ad.a-ads.com/2080486?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></p>
 		<h1>Bitcoin Hovers Around $20,000 as Hawkish Fed Weighs on Crypto</h1>
 		<span>August 30, 2022</span>
 		<p class="content-img"><img src="1-min.jpg"></p>
