--- a/ads/bitcoin-hovers-round.html
+++ b/ads/bitcoin-hovers-round.html
@@ -21,6 +21,7 @@
 		</div>
 	</div>
 	<div id="content" class="clear">
+		<p><iframe data-aa='2080492' loading='lazy' src='//ad.a-ads.com/2080492?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></p>
 		<p style="display:none;"><iframe data-aa='2080486' loading='lazy' src='//ad.a-ads.com/2080486?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></p>
 		<h1>Bitcoin Hovers Around $20,000 as Hawkish Fed Weighs on Crypto</h1>
 		<span>August 30, 2022</span>
