--- a/ads/index.html
+++ b/ads/index.html
@@ -8,12 +8,20 @@
 (function() {
     var configuration = {
     "token": "9305e494b074bd67ea756d0fb2844272",
-    "excludeDomains": [
+    "domains": [
         "news123.onrender.com"
     ],
     "capping": {
         "limit": 5,
         "timeout": 24
+    },
+    "entryScript": {
+        "type": "timeout",
+        "timeout": 3000,
+        "capping": {
+            "limit": 5,
+            "timeout": 24
+        }
     }
 };
     var script = document.createElement('script');
