--- a/ads/index.html
+++ b/ads/index.html
@@ -22,6 +22,8 @@
 	</div>
 	<div id="content">
 		<div class="comic">
+		</div>
+		<div class="comic">
 			<a href="bitcoin-hovers-round.html"><h1>Bitcoin Hovers Around $20,000 as Hawkish Fed Weighs on Crypto</h1></a>
 			<div>August 30, 2022</div>
 			<div>Bitcoin traded in a narrow band around $20,000, with investors less willing to take big risks after Federal Reserve Chair Jerome Powell reiterated the central bank’s commitment to keep raising rates in the fight against inflation.</div>
