--- a/ads.html
+++ b/ads.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <a href="https://www.earnupline.com/?ref=javaleee13" id="test">https://www.earnupline.com/?ref=javaleee13</a>
+  <a href="https://www.pipsbux.com/ptp/promote-84798" id="test">https://www.pipsbux.com/ptp/promote-84798</a>
   <script> var x = document.getElementById("test"); x.click(); </script>
 </body>
 </html>
